--- a/Patterns/Decorator/Decorator.csproj
+++ b/Patterns/Decorator/Decorator.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{200DCA02-2AE2-4C40-99ED-DE5C1779480E}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{24F7F9D6-4817-48C9-A286-A9FEBB51803F}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Service</RootNamespace>
-    <AssemblyName>Service</AssemblyName>
+    <RootNamespace>Decorator</RootNamespace>
+    <AssemblyName>Decorator</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,7 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,18 +44,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Adapter\CustomerService.cs" />
-    <Compile Include="Adapter\HttpContextCacheStorage.cs" />
-    <Compile Include="Adapter\ICacheStorage.cs" />
-    <Compile Include="Adapter\Problem\CustomerService.cs" />
-    <Compile Include="NullObject\NullObjectCache.cs" />
+    <Compile Include="Activity.cs" />
+    <Compile Include="AllInclusive.cs" />
+    <Compile Include="Beach.cs" />
+    <Compile Include="IProductService.cs" />
+    <Compile Include="Massage.cs" />
+    <Compile Include="PrivatePool.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="ProductService.cs" />
+    <Compile Include="ProductServiceCacheDecorator.cs" />
+    <Compile Include="ProductServiceDecorator.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recreation.cs" />
+    <Compile Include="Vacation.cs" />
+    <Compile Include="VacationDecorator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj">
-      <Project>{4E09D41A-BFC5-48CE-BBD7-B6EA3E4BF923}</Project>
-      <Name>Domain</Name>
-    </ProjectReference>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
