--- a/Patterns/Domain/Domain.csproj
+++ b/Patterns/Domain/Domain.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Singleton\Singleton.cs" />
+    <Compile Include="Singleton\TheadSafeSingleton.cs" />
     <Compile Include="Strategy\Address.cs" />
     <Compile Include="Adapter\Customer.cs" />
     <Compile Include="Strategy\Alternative\ShippingCostCalculatorService.cs" />
@@ -53,6 +59,9 @@
     <Compile Include="Strategy\ShippingCostCalculatorService.cs" />
     <Compile Include="Strategy\ShippingOptions.cs" />
     <Compile Include="Strategy\UpsShippingStrategy.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
